# free-model-router

./: .env.example  .gitignore  .roorules  .windsurfrules  AGENTS.md  ALL_LICENSES.json  CREDITS.txt  README.md  README_ja.md  config.json  config.yaml  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.githooks/: README.md  commit-msg  pre-commit  pre-push  sensitive-patterns.txt
.githooks/lib/: scan-sensitive.sh
.github/: pull_request_template.md
.github/workflows/: pr-body-validator.yml  sensitive-info-guard.yml
adapters/: __init__.py  base.py  cerebras.py  groq.py  ollama.py  openrouter.py  provider_factory.py  sambanova.py
docs/: how-it-works.md  how-it-works_jp.md
router/: failover.py  model_router.py  preprocessor.py  tool_support_registry.py  tool_verifier.py
tests/: test_base.py  test_failover.py  test_main.py  test_model_router.py  test_ollama.py  test_openrouter.py  test_tool_support_registry.py  test_tool_verifier.py
